syntax = "proto3";

package vmessocket.core.proxy.freedom;
option csharp_namespace = "vmessocket.Core.Proxy.Freedom";
option go_package = "github.com/vmessocket/vmessocket/proxy/freedom";
option java_package = "com.vmessocket.core.proxy.freedom";
option java_multiple_files = true;

import "common/protocol/server_spec.proto";

message DestinationOverride {
  vmessocket.core.common.protocol.ServerEndpoint server = 1;
}

message Config {
  uint32 timeout = 2 [deprecated = true];
  DestinationOverride destination_override = 3;
}
